--- a/interface/index.css
+++ b/interface/index.css
@@ -2,19 +2,51 @@ body {
 	margin: 0;
 	width: 100vw;
 	height: 100vh;
+	background-color: #457b9d;
+}
+
+#container {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 header {
-	padding-top: 1em;
-	margin-bottom: 2em;
-	text-align: center;
+	display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #a8dadc;
+    border-top-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+    width: 45%;
+    padding: 1em;
 }
 
-h1 {
-	margin: 0px;
+#timeline-title {
+	font-family: 'Open Sans', sans-serif;
+    font-size: 2.7em;
+    margin: 0px;
+    border-bottom: 1px solid #457a9d;
+    border-top: 1px solid #ff0461;
+    color: #1d3557;
 }
 
 #timeline {
 	height: 50%;
 	width: 100%;
+	overflow-x: scroll;
+	overflow-y: hidden;
+}
+
+#timeline-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+	background-color: #f1faee;
+	border-top: 2em solid #1d3557;
+	border-bottom: 2em solid #1d3557;
 }
